@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-16 07:39";
+char cvsdate[]="2004-06-16 10:20";
