@@ -1,3 +1,11 @@
+2004-06-16 07:42  sisoft
+
+	* Changes, INSTALL, qico.conf.sample, src/binkp.c, src/call.c,
+	  src/daemon.c, src/ftn.h, src/mailer.h, src/perl.c, src/session.c,
+	  stuff/test.pl:
+
+	some perl-related changes.
+
 2004-06-15 00:29  sisoft
 
 	* Changes, src/flaglex.l, src/session.c:
